name:                tell-homepage
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/mpilman/tell-homepage#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Pilman
maintainer:          markus@pilman.ch
copyright:           Markus Pilman
category:            ETH
build-type:          Simple
cabal-version:       >=1.10

executable tell-homepage
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
